<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up_stylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.mytime2sallon.SignUpStylistActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/circle">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/mts"
                    android:textAppearance="?android:attr/textAppearanceMedium" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etSallonName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/textColor"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/enter_sallonname"
                    android:inputType="textPersonName"
                    android:lines="1"

                    android:padding="5dp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:lines="1"

                    android:padding="5dp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/textColor"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:padding="5dp" />
                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/textColor"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:padding="5dp" />
                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="5dp" />


                <RelativeLayout
                    android:id="@+id/rlCity"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_toLeftOf="@+id/imgArrowCity"
                        android:layout_marginRight="25dp"
                        android:text="@string/select_city"/>
                    <ImageView
                        android:id="@+id/imgArrowCity"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/arrow_down_float"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlArea"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_toLeftOf="@+id/imgArrowArea"
                        android:layout_marginRight="25dp"
                        android:text="@string/select_area"/>
                    <ImageView
                        android:id="@+id/imgArrowArea"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/arrow_down_float"/>
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlColony"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvColony"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColor"
                        android:layout_centerVertical="true"
                        android:padding="2dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_toLeftOf="@+id/imgArrowColony"
                        android:layout_marginRight="25dp"
                        android:text="@string/select_Colony"/>
                    <ImageView
                        android:id="@+id/imgArrowColony"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:src="@android:drawable/arrow_down_float"/>
                </RelativeLayout>

                <EditText
                    android:id="@+id/etAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="5dp"
                    android:maxLines="3"
                    android:minLines="3"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="top"
                    android:layout_marginTop="5dp"
                    android:background="#b3aeae"
                    android:hint="@string/enter_address"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:onClick="setLocation"
                        android:background="@drawable/rounded_button"
                        android:text="@string/set_location"/>

                    <TextView
                        android:id="@+id/tvMapLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="latitude=0  longitude=0"/>


                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="signUp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/sign_up" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</RelativeLayout>
